--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,28 +1,31 @@
-<!--index.wxml-->
-<navigation-bar title="Weixin" back="{{false}}" color="black" background="#FFF"></navigation-bar>
-<scroll-view class="scrollarea" scroll-y type="list">
-  <view class="container">
-    <view class="userinfo">
-      <block wx:if="{{canIUseNicknameComp && !hasUserInfo}}">
-        <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
-          <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
-        </button>
-        <view class="nickname-wrapper">
-          <text class="nickname-label">昵称</text>
-          <input type="nickname" class="nickname-input" placeholder="请输入昵称" bind:change="onInputChange" />
-        </view>
-      </block>
-      <block wx:elif="{{!hasUserInfo}}">
-        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
-        <view wx:else> 请使用2.10.4及以上版本基础库 </view>
-      </block>
-      <block wx:else>
-        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-      </block>
-    </view>
-    <view class="usermotto">
-      <text class="user-motto">{{motto}}</text>
+<!-- pages/index/index.wxml -->
+<view class="container">
+  <view class="header">
+    <text class="score">得分: {{score}}</text>
+    <button class="restart-btn" bindtap="restart">🔄</button>
+  </view>
+
+  <view class="board">
+    <block wx:for="{{board}}" wx:key="index">
+      <view class="row">
+        <block wx:for="{{item}}" wx:key="index">
+          <view class="cell value-{{item}}">
+            {{item || ''}}
+          </view>
+        </block>
+      </view>
+    </block>
+  </view>
+
+  <view class="controls">
+    <button class="ctrl-btn" bindtap="onUp">↑</button>
+    <view class="ctrl-row">
+      <button class="ctrl-btn" bindtap="onLeft">←</button>
+      <button class="ctrl-btn" bindtap="onDown">↓</button>
+      <button class="ctrl-btn" bindtap="onRight">→</button>
     </view>
   </view>
-</scroll-view>
+
+  <view wx:if="{{gameWin}}" class="overlay">🎉 你赢了！</view>
+  <view wx:if="{{gameOver}}" class="overlay">💀 游戏结束</view>
+</view>
