--- a/miniprogram/pages/index/index.scss
+++ b/miniprogram/pages/index/index.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20rpx;
+  padding: 60rpx 20rpx;
+  background: $bg-color;
 }
 
 .header {
@@ -13,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30rpx;
+  margin-bottom: 60rpx;
 }
 
 .score {
@@ -34,9 +35,10 @@
   width: 600rpx;
   height: 600rpx;
   background: $board-bg;
-  border-radius: 10rpx;
+  border-radius: 16rpx;
   padding: 20rpx;
   box-sizing: border-box;
+  margin-bottom: 40rpx;
 }
 
 .row {
@@ -57,6 +59,7 @@
   font-weight: bold;
   font-size: 36rpx;
   color: #776e65;
+  transition: all 0.1s ease;
 }
 
 .value-2 { background: #eee4da; }
